Loops: Fix slider alignment

--- a/less/loops.less
+++ b/less/loops.less
@@ -239,13 +239,19 @@
 	}
 }
 
-.widget_siteorigin-panels-postloop h1.entry-title {
-	margin-top: 0;
-	margin-bottom: 0;
-}
+.widget_siteorigin-panels-postloop {
+	h1.entry-title {
+		margin-top: 0;
+		margin-bottom: 0;
+	}
 
-.widget_siteorigin-panels-postloop .pagination {
-	margin-top: 20px;
+	.pagination {
+		margin-top: 20px;
+	}
+
+	.flexslider .slides .slide {
+		margin-left: 0;
+	}
 }
 
 @media (max-width:640px) {
